<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidedialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/jabjai_heavy"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textColor="#FFD23F"
        app:layout_constraintBottom_toTopOf="@id/guidedialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_dialogExitNO"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:autoSizeTextType="uniform"
        android:background="@android:color/transparent"
        android:fontFamily="@font/jabjai_heavy"
        android:gravity="center"
        android:text="@string/no"
        android:textColor="#985277"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidedialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_dialogExitYES" />

    <Button
        android:id="@+id/btn_dialogExitYES"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:autoSizeTextType="uniform"
        android:background="@android:color/transparent"
        android:fontFamily="@font/jabjai_heavy"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="#D1462F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_dialogExitNO"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidedialog"/>

</androidx.constraintlayout.widget.ConstraintLayout>